# assetguy

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
assetguy/: __init__.py  cli.py
assetguy/assets/: __init__.py  base.py  gif.py  image.py  video.py
assetguy/config/: __init__.py  manager.py  presets.py
assetguy/operations/: __init__.py  compare.py  convert.py  inspect.py  optimize.py
assetguy/tools/: __init__.py  detector.py  executor.py
assetguy/utils/: __init__.py  formatting.py  paths.py
